--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set tag
-        run: echo "PR_TAG=$(date +%Y%m%d)" >> $GITHUB_ENV
+        id: set_tag
+        run: echo "PR_TAG=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
       - name: Create tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-        custom_tag: $PR_TAG
+        custom_tag: ${{ steps.set_tag.outputs.PR_TAG }}
