--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,18 +4,46 @@ on:
     branches:
       - main
 env:
-  TAG: "$(date +%Y%m%d)"
+  REGISTRY: "us-docker.pkg.dev"
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ vars.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+      
       - name: Set tag
         id: set_tag
         run: echo "PR_TAG=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
+
+      - name: Build
+        id: bake
+        uses: docker/bake-action@v5
+        with:
+          source: "{{defaultContext}}:docker"
+          push: true
+          files: |
+            ./docker-bake.hcl
+          set: |
+            default.TAG=${{ steps.set_tag.outputs.PR_TAG }}
+      
       - name: Create tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_tag: ${{ steps.set_tag.outputs.PR_TAG }}
+
