--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
           push: true
           files: |
             ./docker-bake.hcl
-          set: |
-            default.TAG=${{ steps.set_tag.outputs.PR_TAG }}
+          #set: |
+          #  default.TAG=${{ steps.set_tag.outputs.PR_TAG }}
       
       - name: Create tag
         id: tag_version
