--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
       
       - name: Set tag
         id: set_tag
-        run: echo "PR_TAG=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
+        #run: echo "BUILD_TAG=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
+        run: echo "BUILD_TAG=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
 
       - name: Build
         id: bake
@@ -45,5 +46,6 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{ steps.set_tag.outputs.PR_TAG }}
+          #custom_tag: ${{ steps.set_tag.outputs.PR_TAG }}
+          custom_tag: ${{ env.BUILD_TAG }}
 
