--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,10 @@ jobs:
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
+      - name: Update chart version
+        id: update_chart_version
+        run: sed -ie "s/^\(.*ersion:\).*/\1 $BUILD_TAG/g" charts/identity-platform/Chart.yaml
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         env:
