--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,11 +53,7 @@ jobs:
 
       - name: Update chart version
         id: update_chart_version
-        run: sed -ie "s/^version:.*/version: $BUILD_TAG/" charts/identity-platform/Chart.yaml
-
-      - name: Update chart app version
-        id: update_chart_app_version
-        run: sed -ie "s/^appVersion:.*/appVersion: $BUILD_TAG/" charts/identity-platform/Chart.yaml
+        run: sed -ie "s/^version:.*/version:\ $BUILD_TAG/" charts/identity-platform/Chart.yaml && sed -ie "s/^appVersion:.*/appVersion:\ $BUILD_TAG/" charts/identity-platform/Chart.yaml
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
