--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,4 +78,5 @@ jobs:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
+          generateReleaseNotes: true
 
