--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,6 @@ jobs:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
-          bodyFile: CHANGLEOG.md
+          bodyFile: CHANGELOG.md
           generateReleaseNotes: true
 
