--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,14 +79,14 @@ jobs:
           generateReleaseNotes: true
           makeLatest: true
 
-      - name: Send Slack notification2
-        id: send_slack_notification2
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL_ID }}
-          SLACK_USERNAME: "ForgeOps_Release"
-          SLACK_TITLE: "ForgeOps Release"
+      #- name: Send Slack notification2
+      #  id: send_slack_notification2
+      #  uses: rtCamp/action-slack-notify@v2
+      #  env:
+      #    SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+      #    SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL_ID }}
+      #    SLACK_USERNAME: "ForgeOps_Release"
+      #    SLACK_TITLE: "ForgeOps Release"
 
       - name: Send Slack notification
         id: send_slack_notification
