--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,8 +82,14 @@ jobs:
       - name: Get changelog
         id: get_changelog
         run: |
-          changelog="$(cat CHANGELOG.md)"
-          echo -e "msg_changelog=\$(cat <<'EOF'\n$changelog\nEOF\n)" >>$GITHUB_OUTPUT
+          {
+            echo "msg_changelog<<EOF"
+            cat CHANGELOG.md
+            echo
+            echo EOF
+          } >> "$GITHUB_OUTPUT"
+          #changelog="$(cat CHANGELOG.md)"
+          #echo -e "msg_changelog=\$(cat <<EOF\n$changelog\nEOF\n)" >>$GITHUB_OUTPUT
 
       - name: Send Slack notification
         id: send_slack_notification
