--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,5 +98,12 @@ jobs:
           webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
           webhook-type: webhook-trigger
           payload: |
-            msg: "ForgeOps release ${{ env.BUILD_TAG }} ${{ steps.get_changelog.outputs.msg_changelog }}"
+            msg: "${{ steps.get_changelog.outputs.msg_changelog }}"
+            blocks:
+              - type: "section"
+                text:
+                  type: "mrkdown"
+                  msg: "${{ steps.get_changelog.outputs.msg_changelog }}"
+
+            #msg: "ForgeOps release ${{ env.BUILD_TAG }} ${{ steps.get_changelog.outputs.msg_changelog }}"
 
