--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,17 +83,24 @@ jobs:
           generateReleaseNotes: true
           makeLatest: true
 
-      - name: Set helm chart URL
-        id: set_helm_chart_url
-        run: |
-          echo "HELM_RELEASE_URL=${{ steps.create_github_release.outputs.html_url }}" | sed -e "s/${{ env.BUILD_TAG }}/identity-platform-${{ env.BUILD_TAG }}/" >>$GITHUB_ENV
-
-      - name: Send Slack notification
-        id: send_slack_notification
+      - name: Send Slack release notification
         uses: slackapi/slack-github-action@v2.0.0
         with:
           webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
           webhook-type: webhook-trigger
           payload: |
-            msg: "${{ env.HELM_RELEASE_URL }}\n${{ steps.create_github_release.outputs.html_url }}"
+            msg: "${{ steps.create_github_release.outputs.html_url }}"
+
+      - name: Set helm chart URL
+        id: set_helm_chart_url
+        run: |
+          echo "HELM_RELEASE_URL=${{ steps.create_github_release.outputs.html_url }}" | sed -e "s/${{ env.BUILD_TAG }}/identity-platform-${{ env.BUILD_TAG }}/" >>$GITHUB_ENV
+
+      - name: Send Slack helm release notification
+        uses: slackapi/slack-github-action@v2.0.0
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: webhook-trigger
+          payload: |
+            msg: "${{ env.HELM_RELEASE_URL }}"
 
