--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,8 @@ jobs:
         run: |
           RELEASE_TAG=$(date +%Y.%m)
           latest_tag=${{ steps.get_latest_release.outputs.tag_name }}
-          major="$(echo $latest_tag | awk -F. '{{print $1}}')"
-          minor="$(echo $latest_tag | awk -F. '{{print $2}}')"
+          major="$(echo $latest_tag | cut -d '.' -f 1)"
+          minor="$(echo $latest_tag | cut -d '.' -f 2)"
           [ "$RELEASE_TAG" == "$major.$minor" ] && patch=$(echo $latest_tag | sed -e "s/^$RELEASE_TAG.\(.*\)/\1/")
           [ -n "$patch" ] && patch=$((patch+1)) || patch=0
           RELEASE_TAG="$RELEASE_TAG.$patch"
