--- a/charts/identity-platform/values.yaml
+++ b/charts/identity-platform/values.yaml
@@ -159,7 +159,7 @@ am:
 
   image:
     repository: us-docker.pkg.dev/forgeops-public/images/am
-    tag: "dev"
+    tag: latest
     pullPolicy: IfNotPresent
     imagePullSecrets: []
 
@@ -234,7 +234,7 @@ amster:
 
   image:
     repository: us-docker.pkg.dev/forgeops-public/images/amster
-    tag: "dev"
+    tag: latest
     pullPolicy: IfNotPresent
     imagePullSecrets: []
 
@@ -282,7 +282,7 @@ ldif_importer:
 
   image:
     repository: us-docker.pkg.dev/forgeops-public/images/ldif-importer
-    tag: "dev"
+    tag: latest
     pullPolicy: Always
     imagePullSecrets: []
 
@@ -327,7 +327,7 @@ idm:
 
   image:
     repository: us-docker.pkg.dev/forgeops-public/images/idm
-    tag: "dev"
+    tag: latest
     pullPolicy: IfNotPresent
     imagePullSecrets: []
 
@@ -399,7 +399,7 @@ admin_ui:
 
   image:
     repository: gcr.io/forgerock-io/platform-admin-ui/docker-build
-    tag: "7.6.0-SNAPSHOT-postcommit-latest"
+    tag: latest
     pullPolicy: IfNotPresent
     imagePullSecrets: []
 
@@ -467,7 +467,7 @@ end_user_ui:
 
   image:
     repository: gcr.io/forgerock-io/platform-enduser-ui/docker-build
-    tag: "7.6.0-SNAPSHOT-postcommit-latest"
+    tag: latest
     pullPolicy: IfNotPresent
     imagePullSecrets: []
 
@@ -535,7 +535,7 @@ login_ui:
 
   image:
     repository: gcr.io/forgerock-io/platform-login-ui/docker-build
-    tag: "7.6.0-SNAPSHOT-postcommit-latest"
+    tag: latest
     pullPolicy: IfNotPresent
     imagePullSecrets: []
 
@@ -603,7 +603,7 @@ ig:
 
   image:
     repository: us-docker.pkg.dev/forgeops-public/images/ig
-    tag: "dev"
+    tag: latest
     pullPolicy: IfNotPresent
     imagePullSecrets: []
 
@@ -678,7 +678,7 @@ ds_snapshot:
 
   image:
     repository: bitnami/kubectl
-    tag: latest
+    tag: 1.31
     pullPolicy: IfNotPresent
     imagePullSecrets: []
 
@@ -701,7 +701,7 @@ ds_idrepo:
 
   image:
     repository: us-docker.pkg.dev/forgeops-public/images/ds
-    tag: "dev"
+    tag: latest
     pullPolicy: IfNotPresent
     imagePullSecrets: []
 
@@ -784,7 +784,7 @@ ds_cts:
 
   image:
     repository: us-docker.pkg.dev/forgeops-public/images/ds
-    tag: "dev"
+    tag: latest
     pullPolicy: IfNotPresent
     imagePullSecrets: []
 
