--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,10 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3.3.0
-        with:
-          image: tonistiigi/binfmt:qemu-v8.1.5
+        uses: docker/setup-qemu-action@v3
+        #uses: docker/setup-qemu-action@v3.3.0
+        #with:
+        #  image: tonistiigi/binfmt:qemu-v8.1.5
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -41,7 +42,7 @@ jobs:
 
       - name: Build
         id: bake
-        uses: docker/bake-action@v5
+        uses: docker/bake-action@v6
         with:
           source: "{{defaultContext}}:docker"
           push: true
