--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,9 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-        #uses: docker/setup-qemu-action@v3.3.0
-        #with:
-        #  image: tonistiigi/binfmt:qemu-v8.1.5
+        uses: docker/setup-qemu-action@v3.3.0
+        with:
+          image: tonistiigi/binfmt:qemu-v9.2.0-51
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -42,8 +42,9 @@ jobs:
 
       - name: Build
         id: bake
-        uses: docker/bake-action@v6
+        uses: docker/bake-action@v5
         with:
+          builder: docker/setup-buildx-action@v3.8.0
           source: "{{defaultContext}}:docker"
           push: true
           files: |
