--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,12 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-        uses: docker/setup-qemu-action@v3.3.0
-        with:
-          image: tonistiigi/binfmt:qemu-v9.2.0-51
+        #uses: docker/setup-qemu-action@v3.3.0
+        #with:
+        #  image: tonistiigi/binfmt:qemu-v9.2.0-51
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v3.8.0
 
       - name: Login to registry
         uses: docker/login-action@v3
@@ -44,7 +44,6 @@ jobs:
         id: bake
         uses: docker/bake-action@v5
         with:
-          builder: docker/setup-buildx-action@v3.8.0
           source: "{{defaultContext}}:docker"
           push: true
           files: |
