--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.8.0
+        with:
+          version: v0.19.3
 
       - name: Login to registry
         uses: docker/login-action@v3
