--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,12 +38,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: start minikube
+      - name: Start minikube
         id: minikube
         uses: medyagh/setup-minikube@latest
 
-      - name: kubectl
-        run: kubectl get pods -A
+      - name: Cluster prereqs
+        run: |
+          kubectl apply -f ./cluster/resources/minikube-fast-storage-class.yaml
+          ./charts/scripts/install-prereqs
 
       - name: Set tag
         id: set_tag
